// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContent /> Should adopt the "content" property 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper__ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    >
      Testing
    </SpeechBubble>
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;

exports[`<PageContent /> Should adopt the "noSpeechBubble" property 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper__ContentWrapper>
    Testing
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;

exports[`<PageContent /> Should adopt the "title" property 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  >
    Testing
  </PageHeader>
  <ContentWrapper__ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    />
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;

exports[`<PageContent /> Should render and match the snapshot 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper__ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    />
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;
